# RoadLancer

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  gmail-forwarder.gs  implementation-plan.md  knowledge-base.md  project-memory.md  project-scope.md  tech-stack.md
.agents/skills/better-auth-best-practices/: SKILL.md
.agents/skills/playwright-e2e/: SKILL.md
.agents/skills/security-review/: SKILL.md
.opencode/plans/: agent-deactivation.md
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: __init__.py  main.py
auth-server/: .dockerignore  Dockerfile  auth.ts  package-lock.json  package.json  queue.ts  seed.ts  server.ts  test_pgboss.ts
auth-server/prisma/: schema.prisma
backend/: .dockerignore  Dockerfile  create_webhook_ticket.py  main.py  manage.py  pyproject.toml  seed_replies_1001.py  seed_tickets.py  setup-gmail-api.sh  test_kb_webhook.py
backend/app/: database.py  email.py  gmail_client.py  main.py  middleware.py
backend/app/routes/: admin.py  ai_proxy.py  auth.py  shipments.py  support.py  users.py  verification.py
backend/app/services/: pricing.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  production.py
backend/core/: models.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20260710_add_is_supreme_field/: migration.sql
frontend/: .dockerignore  .env.production  .env.test  .npmrc  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/prisma/: schema.prisma
frontend/src/: App.vue  auth.ts  main.ts  style.css  test.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AgentsTable.vue  BidReviewDialog.vue  (+14 more)
frontend/tests/: auth.spec.ts  global-setup.ts  global-teardown.ts  setup.ts  support-webhook.spec.ts  ticket-detail-page.spec.ts
(+49 files in other folders)
