[project]
name = "roadlancer-ai-service"
version = "0.1.0"
description = "FastAPI AI Price Floor & Backhaul Recommendation Engine for RoadLancer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.1.post1",
    "joblib>=1.3.2",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
