[project]
name = "roadlancer-backend"
version = "0.1.0"
description = "Django 5 REST API & Channels Backend for RoadLancer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
    "django-phonenumber-field[phonenumbers]>=8.0.0",
    "djangorestframework-simplejwt>=5.4.0",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "channels>=4.2.0",
    "daphne>=4.0.0",
    "channels-redis>=4.2.1",
    "uvicorn[standard]>=0.34.0",
    "django-storages[boto3]>=1.14.4",
    "pillow>=11.1.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.9.9",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
