[project]
name = "roadlancer-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.1",
    "fastapi-betterauth>=0.2.6",
    "httpx>=0.28.0",
    "prisma>=0.15.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
